[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/ui/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://static/titlescreen.png" type="Texture" id=3]
[ext_resource path="res://src/ui/default_theme.tres" type="Theme" id=4]
[ext_resource path="res://static/note_icon.png" type="Texture" id=5]
[ext_resource path="res://static/sfx_icon.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Animate"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Titlescreen:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.4, 2.5, 2.6, 6, 6.1, 6.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Titlescreen:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="Titlescreen" type="Sprite" parent="."]
position = Vector2( 0, 8 )
texture = ExtResource( 3 )
centered = false
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Animate"
anims/Animate = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="PlayButton" type="Button" parent="."]
margin_left = 160.0
margin_top = 80.0
margin_right = 240.0
margin_bottom = 95.0
focus_mode = 0
enabled_focus_mode = 0
text = "PLAY"

[node name="QuitButton" type="Button" parent="."]
margin_left = 77.0
margin_top = 80.0
margin_right = 157.0
margin_bottom = 95.0
focus_mode = 0
enabled_focus_mode = 0
text = "QUIT"

[node name="Node2D" type="Node2D" parent="."]

[node name="MusicSlider" type="HSlider" parent="Node2D"]
margin_left = 152.0
margin_top = 138.0
margin_right = 184.0
margin_bottom = 147.0
focus_mode = 0
min_value = -30.0
max_value = 0.0
value = -10.0

[node name="SFXSlider" type="HSlider" parent="Node2D"]
margin_left = 152.0
margin_top = 154.0
margin_right = 184.0
margin_bottom = 163.0
focus_mode = 0
min_value = -30.0
max_value = 0.0
value = -10.0

[node name="NoteIcon" type="Sprite" parent="Node2D"]
position = Vector2( 141.5, 142 )
texture = ExtResource( 5 )

[node name="SfxIcon" type="Sprite" parent="Node2D"]
position = Vector2( 143, 158 )
texture = ExtResource( 6 )

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="value_changed" from="Node2D/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="Node2D/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
